--- a/cartridges/mens_app/cartridge/static/default/css/style.css
+++ b/cartridges/mens_app/cartridge/static/default/css/style.css
@@ -1027,6 +1027,27 @@ ul {
   .category-items {
     width: 50%; } }
 
+.btn {
+  text-align: center;
+  width: 100%;
+  border-radius: 0;
+  padding: 12px;
+  font-family: "Avenir-LT-Std";
+  font-size: 20px;
+  font-weight: 900;
+  color: #000000 !important;
+  background-color: #ffffff; }
+  .btn--gray {
+    background-color: #c2c3c6;
+    color: #000000 !important; }
+    .btn--gray:hover {
+      background-color: #000000;
+      color: #ffffff !important; }
+  .btn__small {
+    padding: 6px; }
+  .btn:focus {
+    box-shadow: none; }
+
 .filter-header {
   margin: 0; }
 
@@ -1039,6 +1060,56 @@ ul {
 .refinements ul li button {
   color: #000000 !important;
   font-size: 15px; }
+
+/* **************************** HOME **************************** */
+#maincontent .container {
+  max-width: 100vw;
+  padding-left: 0px;
+  padding-right: 0px;
+  overflow-x: hidden; }
+
+#maincontent .experience-commerce_assets-topBar {
+  padding-bottom: 1rem !important; }
+
+.editorialRichText-component-container .text-center {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.editorialRichText-component-container .text-center p,
+.editorialRichText-component-container .text-center a,
+.editorialRichText-component-container .text-center h1,
+.editorialRichText-component-container .text-center h2,
+.editorialRichText-component-container .text-center h3,
+.editorialRichText-component-container .text-center h4 {
+  font-family: "Avenir-LT-Std";
+  color: #000000 !important;
+  text-decoration: none; }
+
+.mobile-2r-2c .region:not(:first-child) {
+  border-left: 1px solid #000000; }
+
+/* @media (max-width: 991px) {
+    .mobile-2r-1c .row {
+      flex-direction: column !important;
+    }
+  } */
+@media (max-width: 544px) {
+  .mobile-2r-2c .region:is(:nth-last-child(2)),
+  .mobile-2r-2c .region:is(:last-child) {
+    border-top: 1px solid #000000; }
+  .mobile-2r-2c .region {
+    margin-bottom: 0px; } }
+
+.hero.slant-down::after {
+  border-width: 0; }
+
+.hero.slant-down .header.page-title,
+.hero.slant-down .page-title::before {
+  background-color: transparent;
+  font-size: 30px;
+  line-height: 34px; }
+
 .btn {
   text-align: center;
   width: 100%;
@@ -1138,12 +1209,3 @@ ul {
     border-top: 1px solid #000000; }
   .mobile-2r-2c .region {
     margin-bottom: 0px; } }
-
-.hero.slant-down::after {
-  border-width: 0; }
-
-.hero.slant-down .header.page-title,
-.hero.slant-down .page-title::before {
-  background-color: transparent;
-  font-size: 30px;
-  line-height: 34px; }
