--- a/cartridges/mens_app/cartridge/static/default/sass/components/_summary.scss
+++ b/cartridges/mens_app/cartridge/static/default/sass/components/_summary.scss
@@ -20,7 +20,7 @@
     font-family: nth($text-font-stack, $avenir-LT-Std);
 
     a {
-      color: $text-color !important;
+      color: $text-color-black !important;
     }
   }
   &__pricing {
